# odin_pdf_parser

./: .gitignore  mypy.ini  pyproject.toml
odin_pdf_parser/: data_types.py  odin_pdf_parser.py
tests/: test_odin_pdf_parser.py
