[tool.poetry]
name = "odin_pdf_parser"
version = "0.1.1"
description = ""
authors = ["renatormc <renatomartinsrmc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
stringcase = "^1.2.0"
"pdfminer.six" = "^20220524"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
